--- a/haske-python/Cargo.toml
+++ b/haske-python/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "haske-python"
-version = "0.3.0"
+version = "0.1.0"
 edition = "2021"
 
 [lib]
 name = "_haske_core"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
-haske-core = { path = "../haske-core" }  # depends on your Rust core
+haske-core = { path = "../haske-core" }
+
+[profile.release]
+strip = "symbols"
+lto = true
