--- a/haske-python/requirements.txt
+++ b/haske-python/requirements.txt
@@ -1,43 +1,11 @@
-starlette==0.37.2
-uvicorn[standard]==0.29.0                        jinja2==3.1.4
-sqlalchemy==2.0.30
-aiosqlite==0.20.0
-typer==0.12.3
-pydantic==2.7.1
-
-# Rust build dependencies (for maturin/pyo3)
+starlette
+uvicorn[standard]
+jinja2
+sqlalchemy
+aiosqlite
 maturin>=1.0,<2.0
-setuptools-rust>=1.8,<2.0                        
-# Optional/development dependencies
-pytest==8.1.1
-pytest-asyncio==0.23.5
-httpx==0.27.0
-python-multipart==0.0.9                          python-dotenv==1.0.1
-cryptography==42.0.5
-
-# Database drivers (choose based on your database)
-# For PostgreSQL:
-# asyncpg==0.29.0
-# psycopg2-binary==2.9.9                         
-# For MySQL:
-# aiomysql==0.2.0
-# mysqlclient==2.2.4                             
-# For SQLite (already included with aiosqlite):
-# aiosqlite==0.20.0                              
-# Authentication/security
-bcrypt==4.1.2
-itsdangerous==2.1.2
-python-jose==3.3.0
-
-# CLI tools
-click==8.1.7
-rich==13.7.1
-# Monitoring/performance
-prometheus-client==0.20.0
-uvloop==0.19.0                                   
-# File handling
-# aiofiles
-# CORS support
+setuptools
+setuptools-rust                      
+bcrypt
+itsdangerous
 starlette-csrf                                   
-# Compression
-brotli==1.1.0
