--- a/haske-core/Cargo.toml
+++ b/haske-core/Cargo.toml
@@ -1,39 +1,63 @@
 [package]
-name = "haske_core"
-version = "0.1.0"
+name = "haske-core"
+version = "0.2.0"
 edition = "2021"
 
 [lib]
-name = "_haske_core"
-crate-type = ["cdylib"]
+name = "haske_core"
+crate-type = ["cdylib", "rlib"]
+
+[features]
+default = ["server"]
+server = ["hyper", "tokio", "tera", "matchit"]
+python-handlers = ["pyo3"]
+simd-json = ["simd-json"]
 
 [dependencies]
-pyo3 = { version = "0.26", features = ["extension-module", "abi3-py37"] }
-regex = "1.7.0"
-serde = { version = "1.0.152", features = ["derive"] }
-serde_json = "1.0.91"
-base64 = "0.21.0"
-hmac = "0.12.1"
-sha2 = "0.10.6"
-pbkdf2 = "0.11.0"
-rand = "0.8.5"
-flate2 = "1.0.25"
-brotli = "3.3.4"
-zstd = "0.12.0"
-bytes = "1.4.0"
-parking_lot = "0.12.1"
-constant_time_eq = "0.2.5"
-moka = "0.10.0"  # Added moka dependency
-sha1 = "0.10.5"  # Added sha1 dependency
+# Async runtime + server
+tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "signal"] }
+hyper = { version = "0.15", optional = true, features = ["full"] }
 
-# Optional SIMD support
-[features]
-default = []
-simd = ["simd-json"]
+# JSON
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+simd-json = { version = "0.6", optional = true }
 
-[dependencies.simd-json]
-version = "0.9.0"
-optional = true
+# Python bindings (optional)
+pyo3 = { version = "0.20", optional = true, features = ["extension-module", "auto-initialize"] }
 
-[build-dependencies]
-pyo3-build-config = "0.26.0"
+# Routing and templating
+matchit = "0.6"
+tera = { version = "1.18", optional = true }
+
+# Utilities
+bytes = "1.4"
+parking_lot = "0.12"
+dashmap = "5.4"
+anyhow = "1.0"
+log = "0.4"
+env_logger = "0.9"
+mime_guess = "2.0"
+walkdir = "2.3"
+base64 = "0.21"
+once_cell = "1.18"
+flate2 = "1.0"
+brotli = "3.3"
+zstd = "0.13"
+hmac = "0.12"
+sha2 = "0.10"
+pbkdf2 = "0.12"
+rand = "0.8"
+constant-time-eq = "0.3"
+regex = "1.10"
+
+[dev-dependencies]
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+criterion = "0.4"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = "debuginfo"
