--- a/haske-core/Cargo.toml
+++ b/haske-core/Cargo.toml
@@ -8,7 +8,7 @@ name = "_haske_core"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.26", features = ["extension-module"] }
+pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }
 regex = "1.7.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
