--- a/haske-python/pyproject.toml
+++ b/haske-python/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
   "httpx>=0.24.0",
   "itsdangerous>=2.1.0",
   "haske-core",
+  "watchdog",
 ]
 
 [project.optional-dependencies]
