--- a/haske-core/Cargo.toml
+++ b/haske-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "haske_core"
-version = "0.2.7"
+version = "0.2.8"
 edition = "2021"
 
 [lib]
@@ -8,7 +8,7 @@ name = "_haske_core"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }
+pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py39"] }
 regex = "1.7.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
@@ -25,6 +25,8 @@ parking_lot = "0.12.1"
 constant_time_eq = "0.2.5"
 moka = "0.10.0"  # Added moka dependency
 sha1 = "0.10.5"  # Added sha1 dependency
+
+once_cell = "1.18.0"
 
 # Optional SIMD support
 [features]
